--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>vapeuyy</title>
     <link rel="shortcut icon" href="https://cdn.discordapp.com/avatars/979475892969566289/82b03ae03add95e6b90d78103442e7dc.png?size=1024" type="image/gif">
 
-    <link rel="stylesheet" href="./assets/css/vape.css">
+    <link rel="stylesheet" href="./index.css">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Radio+Canada:wght@500&display=swap" rel="stylesheet">
 </head>
