--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <img src="https://cdn.discordapp.com/avatars/979475892969566289/33e38ff8cf97b56e70bc5cb69ce2c874.png?size=1024" alt="">
         <h3>vapeuyy</h3>
         <br>
-        <p>attempting to create a clothing brand.</p>
-        <p>full stack javascript developer.</p>
-        <p>discord bot owner +600 servers.</p>
+        <p>Developer, Community Manager.</p>
+        <p>›  https://www.skycodes.xyz</p>
+        <br><br>
         <p>and more to discover.</p>
     </span>
 
