--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h3>vapeuyy</h3>
         <br>
         <p>Developer, Community Manager.</p>
-        <p>›  https://www.skycodes.xyz</p>
+        <p>›  <a href="https://www.skycodes.xyz">https://www.skycodes.xyz</a></p>
         <br><br>
         <p>and more to discover.</p>
     </span>
