--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <!--  PRIMERA FILA -->
         <div class="rectangulo-arriba" style="background-color: #773655;">
-            <div class="texto-rectangulo-arriba"> 
+            <div class="texto-rectangulo-arriba">
                 <div class="nombre">vapeuyy</div>
                 <div class="edad">14 y/o</div>
             </div>
@@ -64,7 +64,7 @@
         </a>
 
 
-        
+
         <!--  CUARTA FILA -->
         <div class="rectangulo" style="background-color: #212121;">
             <img class="imagen-centrada-2"
@@ -96,7 +96,41 @@
                     alt="github.com">
             </div>
         </a>
-        
+
+
+        <!--  SEXTA FILA -->
+        <a href="https://www.skycodes.xyz/">
+        <div class="cuadrado-chico-con-efectos" style="background-color: #1a1b27;">
+            <img class="imagen-centrada-4"
+                src="https://cdn.discordapp.com/avatars/1063561771077603348/7c78f1db361a60d140ff3c92214d2210.png"
+                alt="www.skycodes.xyz">
+        </div>
+    </a>
+
+    <a href="https://www.skycodes.xyz/vpguard">
+        <div class="cuadrado-chico-con-efectos" style="background-color: #1a1b27;">
+            <img class="imagen-centrada-4"
+                src="https://cdn.discordapp.com/avatars/897276505854455819/57389ecd518c8f22c38d2edcd6d813f4.png"
+                alt="www.skycodes.xyz/vpguard">
+        </div>
+    </a>
+
+    <a href="https://www.skycodes.xyz/promptai">
+        <div class="cuadrado-chico-con-efectos" style="background-color: #1a1b27;">
+            <img class="imagen-centrada-4"
+                src="https://cdn.discordapp.com/avatars/1132204603656642612/c80391e1c232d2762ad27f5ada6f7722.png"
+                alt="www.skycodes.xyz/promptai">
+        </div>
+    </a>
+
+    <a href="https://www.skycodes.xyz/voxy">
+        <div class="cuadrado-chico-con-efectos" style="background-color: #1a1b27;">
+            <img class="imagen-centrada-4"
+                src="https://cdn.discordapp.com/avatars/1071484849564680353/1e3b2d1ea742a82c0cfea22d20f78c9f.png"
+                alt="www.skycodes.xyz/voxy">
+        </div>
+    </a>
+
 
 
         <!--  MARGENES -->
