--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
         <a href="https://discord.com/users/979475892969566289">
             <div class="rectangulo-con-efectos" style="background-color: #1a1c1f;">
-                <img class="imagen-centrada-2"
+                <img id="discord" class="imagen-centrada-2"
                     src="https://lanyard-profile-readme.vercel.app/api/979475892969566289?animated=false&hideDiscrim=true&idleMessage=No%20activity%20recently."
                     alt="discord.com">
             </div>
@@ -67,7 +67,7 @@
 
         <!--  CUARTA FILA -->
         <div class="rectangulo" style="background-color: #212121;">
-            <img class="imagen-centrada-2"
+            <img id="spotify" class="imagen-centrada-2"
                 src="https://spotify-recently-played-readme.vercel.app/api?user=316g6lm3zznouehsvsghxis5rr4m&width=830"
                 alt="spotify.com">
         </div>
@@ -100,36 +100,36 @@
 
         <!--  SEXTA FILA -->
         <a href="https://www.skycodes.xyz/">
-        <div class="cuadrado-chico-con-efectos" style="background-color: #1a1b27;">
-            <img class="imagen-centrada-4"
-                src="https://cdn.discordapp.com/avatars/1063561771077603348/7c78f1db361a60d140ff3c92214d2210.png"
-                alt="www.skycodes.xyz">
-        </div>
-    </a>
+            <div class="cuadrado-chico-con-efectos" style="background-color: #1a1b27;">
+                <img class="imagen-centrada-4"
+                    src="https://cdn.discordapp.com/avatars/1063561771077603348/7c78f1db361a60d140ff3c92214d2210.png"
+                    alt="www.skycodes.xyz">
+            </div>
+        </a>
 
-    <a href="https://www.skycodes.xyz/vpguard">
-        <div class="cuadrado-chico-con-efectos" style="background-color: #1a1b27;">
-            <img class="imagen-centrada-4"
-                src="https://cdn.discordapp.com/avatars/897276505854455819/57389ecd518c8f22c38d2edcd6d813f4.png"
-                alt="www.skycodes.xyz/vpguard">
-        </div>
-    </a>
+        <a href="https://www.skycodes.xyz/vpguard">
+            <div class="cuadrado-chico-con-efectos" style="background-color: #1a1b27;">
+                <img class="imagen-centrada-4"
+                    src="https://cdn.discordapp.com/avatars/897276505854455819/57389ecd518c8f22c38d2edcd6d813f4.png"
+                    alt="www.skycodes.xyz/vpguard">
+            </div>
+        </a>
 
-    <a href="https://www.skycodes.xyz/promptai">
-        <div class="cuadrado-chico-con-efectos" style="background-color: #1a1b27;">
-            <img class="imagen-centrada-4"
-                src="https://cdn.discordapp.com/avatars/1132204603656642612/c80391e1c232d2762ad27f5ada6f7722.png"
-                alt="www.skycodes.xyz/promptai">
-        </div>
-    </a>
+        <a href="https://www.skycodes.xyz/promptai">
+            <div class="cuadrado-chico-con-efectos" style="background-color: #1a1b27;">
+                <img class="imagen-centrada-4"
+                    src="https://cdn.discordapp.com/avatars/1132204603656642612/c80391e1c232d2762ad27f5ada6f7722.png"
+                    alt="www.skycodes.xyz/promptai">
+            </div>
+        </a>
 
-    <a href="https://www.skycodes.xyz/voxy">
-        <div class="cuadrado-chico-con-efectos" style="background-color: #1a1b27;">
-            <img class="imagen-centrada-4"
-                src="https://cdn.discordapp.com/avatars/1071484849564680353/1e3b2d1ea742a82c0cfea22d20f78c9f.png"
-                alt="www.skycodes.xyz/voxy">
-        </div>
-    </a>
+        <a href="https://www.skycodes.xyz/voxy">
+            <div class="cuadrado-chico-con-efectos" style="background-color: #1a1b27;">
+                <img class="imagen-centrada-4"
+                    src="https://cdn.discordapp.com/avatars/1071484849564680353/1e3b2d1ea742a82c0cfea22d20f78c9f.png"
+                    alt="www.skycodes.xyz/voxy">
+            </div>
+        </a>
 
 
 
