--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vape Developer</title>
+    <title>gbauu</title>
     <link rel="shortcut icon"
         href="https://cdn.discordapp.com/attachments/985521761720336464/1186778970386071664/668290.png"
         type="image/gif">
@@ -23,15 +23,15 @@
         <!--  PRIMERA FILA -->
         <div class="rectangulo-arriba" style="background-color: #773655;">
             <div class="texto-rectangulo-arriba">
-                <div class="nombre">vapeuyy</div>
-                <div class="edad">14 y/o</div>
+                <div class="nombre">gbauu</div>
+                <div class="edad">16 y/o</div>
             </div>
         </div>
 
-        <a href="https://twitter.com/vapeuyy">
+        <a href="https://x.com/vapeuyy">
             <div class="cuadrado-con-efectos" style="background-color: #262626;">
                 <img class="imagen-centrada-1"
-                    src="https://media.discordapp.net/attachments/985521761720336464/1186756941461082142/twitter-removebg-preview.png"
+                    src="https://upload.wikimedia.org/wikipedia/commons/5/57/X_logo_2023_%28white%29.png"
                     alt="twitter.com">
             </div>
         </a>
@@ -41,7 +41,7 @@
         <!--  SEGUNDA FILA -->
         <div class="rectangulo-info" style="background-color: #a04c95;">
             <div class="texto-rectangulo">
-                Hi, I'm Vape,<br> a passionate software developer. I have been programming since I can remember and I am
+                Hi, I'm gbauu,<br> a software developer. I have been programming since I can remember and I am
                 currently immersed in various projects. In addition to my love for programming, I enjoy making music and
                 going out with friends.
             </div>
@@ -99,34 +99,34 @@
 
 
         <!--  SEXTA FILA -->
-        <a href="https://www.skycodes.xyz/">
+        <a onclick="alert('No project available.')" href="">
             <div class="cuadrado-chico-con-efectos" style="background-color: #1a1b27;">
                 <img class="imagen-centrada-4"
-                    src="https://cdn.discordapp.com/avatars/1063561771077603348/7c78f1db361a60d140ff3c92214d2210.png"
+                    src="https://media.tenor.com/dzNBYn5e0bcAAAAM/im-busy-orange-cat.gif"
                     alt="www.skycodes.xyz">
             </div>
         </a>
 
-        <a href="https://www.skycodes.xyz/vpguard">
+        <a onclick="alert('No project available.')" href="">
             <div class="cuadrado-chico-con-efectos" style="background-color: #1a1b27;">
                 <img class="imagen-centrada-4"
-                    src="https://cdn.discordapp.com/avatars/897276505854455819/57389ecd518c8f22c38d2edcd6d813f4.png"
+                    src="https://media.tenor.com/dzNBYn5e0bcAAAAM/im-busy-orange-cat.gif"
                     alt="www.skycodes.xyz/vpguard">
             </div>
         </a>
 
-        <a href="https://www.skycodes.xyz/promptai">
+        <a onclick="alert('No project available.')" href="">
             <div class="cuadrado-chico-con-efectos" style="background-color: #1a1b27;">
                 <img class="imagen-centrada-4"
-                    src="https://cdn.discordapp.com/avatars/1132204603656642612/c80391e1c232d2762ad27f5ada6f7722.png"
+                    src="https://media.tenor.com/dzNBYn5e0bcAAAAM/im-busy-orange-cat.gif"
                     alt="www.skycodes.xyz/promptai">
             </div>
         </a>
 
-        <a href="https://www.skycodes.xyz/voxy">
+        <a onclick="alert('No project available.')" href="">
             <div class="cuadrado-chico-con-efectos" style="background-color: #1a1b27;">
                 <img class="imagen-centrada-4"
-                    src="https://cdn.discordapp.com/avatars/1071484849564680353/1e3b2d1ea742a82c0cfea22d20f78c9f.png"
+                    src="https://media.tenor.com/dzNBYn5e0bcAAAAM/im-busy-orange-cat.gif"
                     alt="www.skycodes.xyz/voxy">
             </div>
         </a>
