--- a/index.html
+++ b/index.html
@@ -9,12 +9,18 @@
     <link rel="shortcut icon"
         href="https://cdn.discordapp.com/attachments/985521761720336464/1186778970386071664/668290.png"
         type="image/gif">
+        
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
     <link rel="stylesheet" href="./index.css">
 </head>
 
 <body>
 
+    <div class="blob"></div>
+    <div class="blob"></div>
+    <div class="blob"></div>
+    
     <div class="container">
 
         <!--  MARGENES -->
@@ -132,6 +138,16 @@
         </a>
 
 
+
+
+  <div id="reproductor">
+    <button id="toggleBtn"><i class="fas fa-play"></i></button>
+    <span id="estado">Beéle, Quevedo - YO Y TU</span>
+    <audio id="audio">
+      <source src="audio.mp3" type="audio/mpeg">
+      Tu navegador no soporta audio HTML5.
+    </audio>
+  </div>
 
         <!--  MARGENES -->
         <div class="margines-arriba-abajo"></div>
